--- a/frontend/src/components/Navbar.js/index.css
+++ b/frontend/src/components/Navbar.js/index.css
@@ -132,7 +132,8 @@
   }
 
   .sidebar-toggle:hover {
-    background-color: #34495e;
+    background-color: #1e2a35;
+    color: #ecf0f1;
   }
 
   .sidebar-toggle:focus {
