--- a/backend/src/utils/email/views/2faVerification.ejs
+++ b/backend/src/utils/email/views/2faVerification.ejs
@@ -54,7 +54,7 @@
       <div class="message">קוד אימות דו-שלבי שלך:</div>
       <div class="code"><%= verificationCode %></div>
       <p class="info">הזן את הקוד הזה כדי להשלים את הכניסה שלך.</p>
-      <div class="footer">&copy; 2025 Fish pay. כל הזכויות שמורות.</div>
+      <div class="footer">&copy; 2025 Pay glow. כל הזכויות שמורות.</div>
     </div>
   </body>
 </html>
