--- a/backend/src/utils/email/views/resetPassword.ejs
+++ b/backend/src/utils/email/views/resetPassword.ejs
@@ -70,7 +70,7 @@
       <p>הקישור לאיפוס הסיסמה שלך נמצא למטה. לחץ על הקישור כדי ליצור סיסמה חדשה:</p>
       <a href="<%= resetLink %>" class="btn">איפוס סיסמה</a>
       <p class="info">אם לא ביקשת איפוס סיסמה, אנא התעלם מהמייל הזה.</p>
-      <div class="footer">&copy; 2025 Fish pay. כל הזכויות שמורות.</div>
+      <div class="footer">&copy; 2025 Pay glow. כל הזכויות שמורות.</div>
     </div>
   </body>
 </html>
